<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_title_label"/>

    <EditText
        android:id="@+id/memory_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/memory_title_hint"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/memory_favorited_switch"/>
    <Switch
        android:id="@+id/favorite"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/memory_photo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="15dp"
        android:padding="0dp"
        android:background="@android:color/darker_gray"/>
    <ImageButton
        android:id="@+id/memory_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"/>
    </LinearLayout>

    <Button
        android:id="@+id/memory_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_date"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_description_label"/>
    <EditText
        android:id="@+id/memory_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:minLines="6"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:hint="@string/memory_description_hint"/>

</LinearLayout>
</ScrollView>